--- a/templates/listVitalsListGrid.vm
+++ b/templates/listVitalsListGrid.vm
@@ -5,8 +5,8 @@
 		#if ($printFirst == 0)
 			#set ($printFirst = 1)	
 			#if ($repos.vitals)
-				{ "titleLabels": ["Type","Description","VitalDate"],
-				 "modelNames": ["Type","Description","VitalDate"],
+				{ "titleLabels": ["Type","Value","Date"],
+				 "modelNames": ["Type","Value","VitalDate"],
 				"patientData":[
 				#foreach(  $vitalDetail in $repos.vitals)
     		   	    #if ($patcnt > 0)
@@ -14,19 +14,27 @@
     		   	    #end
     		   	    #set ($patcnt = $patcnt+1)
     		   	    {"id":"$patcnt"
-    		   		#if ($vitalDetail.mood_code)
-    		   		     ,"Type": "$vitalDetail.mood_code" 
-                    #end
     		   		#if ($vitalDetail.description)
-    		  		    ,"Description": "$vitalDetail.description" 
-    		  			
-    					#if($vitalDetail.time)
+    		   		     ,"Type": "$vitalDetail.description" 
+                    #end
+                    
+                    #foreach ( $value in $vitalDetail.values)
+                        
+                        #if ($value.scalar)
+                            #if ($value.scalar.length > 10)
+                                 ,"Value": "$value.scalar.substring(0,6)"
+                            #else
+                                ,"Value": "$value.scalar"
+                            #end
+                        #end
+                    #end
+    		   		
+    				#if($vitalDetail.time)
     		               	
-    			          , "VitalDate":"$vitalDetail.time"
+    			         , "VitalDate":"$vitalDetail.time"
     			               
-    		            #end
-    		            }
-    	   			#end
+    		        #end
+    	   			}
     	   		#end
 	   			]}
 	   		#end
