Add code for insert allergy to Vista

--- a/templates/listPatientAllergies.vm
+++ b/templates/listPatientAllergies.vm
@@ -12,13 +12,21 @@
 			<br>
 			<br>
 			Add a new allergy
-			<a onclick="insertDialog('$cacheKey', '$repos.repository')" href="#" class="ui-icon ui-icon-circle-plus" style="float: right; margin-left: .3em;"></a>
+			#if ($repos.can_insert=="false")
+			   <a onclick="alert('Cannot insert to primary repository. Not enabled')" href="#" class="ui-icon ui-icon-circle-plus" style="float: right; margin-left: .3em;"></a>
+			#else
+			   <a onclick="insertDialog('$cacheKey', '$repos.repository')" href="#" class="ui-icon ui-icon-circle-plus" style="float: right; margin-left: .3em;"></a>
+			#end
 			#set ($firstRepository = false)
 			#set ($loopCount = $loopCount + 1)
 		#end
 		#if ($firstRepository== true)
-		<a onclick="insertDialog('$cacheKey', '$repos.repository')" href="#" class="ui-icon ui-icon-circle-plus" style="float: right; margin-left: .3em;"></a>
-		#end
+                    #if ($repos.can_insert=="false")
+			   <a onclick="alert('Cannot insert to primary repository. Not enabled')" href="#" class="ui-icon ui-icon-circle-plus" style="float: right; margin-left: .3em;"></a>
+	            #else
+		         <a onclick="insertDialog('$cacheKey', '$repos.repository')" href="#" class="ui-icon ui-icon-circle-plus" style="float: right; margin-left: .3em;"></a>
+		    #end
+                #end
 		#if ($repos.allergies)
 			#if ($firstRepository != true)
 				#if ($loopCount == 1)
