--- a/templates/listEncounters.vm
+++ b/templates/listEncounters.vm
@@ -32,35 +32,21 @@
             #if ($encounterDetail.description)
 					$encounterDetail.description
             #else
-               #if ($encounterDetail.codes)
-					    Encounter: 
-                  #if ($encounterDetail.codes.ICD-9-CM && $encounterDetail.codes.ICD-9-CM.length>0)
-                                                ICD-9-CM:
-                     #foreach ($code in $encounterDetail.codes.ICD-9-CM)
-						   $code;
-                     #end
-                  #else
-                     #if ($encounterDetail.codes.CPT && $encounterDetail.codes.CPT.length>0)
-                                                    CPT: 
-                         #foreach ($code in $encounterDetail.codes.CPT)
-						   $code;
-                         #end
-                     #else
-                        #if ($encounterDetail.codes.HPCS && $encounterDetail.codes.HPCS.length>0)
-                                                       HPCS: 
-                           #foreach ($code in $encounterDetail.codes.HPCS )
-						   $code;
-                           #end
-                        #else
-                           #if ($encounterDetail.codes.SNOMED-CT && $encounterDetail.codes.SNOMED-CT.length>0)
-                                                          SNOMED-CT:   
-                              #foreach ($code in $encounterDetail.codes.SNOMED-CT)
-						   $code;
-                              #end
-                           #end
+	    	
+               #if ($encounterDetail.codes) 
+			Encounter: 		
+                   #foreach ($code in $encounterDetail.codes.keySet())
+                        
+			#if ($encounterDetail.codes.get($code).length>0)
+				$code:
+				#foreach ($subcode in $encounterDetail.codes.get($code))
+						   $subcode;
+                     		#end
                         #end
-                     #end
-                  #end               
+
+                   #end
+
+	
 	       #end
             #end
 	</b><br/>
